Finished barber schedule adjustment system. Hopefully it's not totally fucked. Didn't test it thoroughly but it should be fine. Added background service for automatically creating schedules. Gonna add trigger that would fire after insert into barber and create schedules for 8 upcoming days including today. Started working on orders to deliver page - misleading and dumb ass name. It kind of works, the style is fucked, date range filter is apparently fucked too. Chat GPT told me - frustration management is a big part of programming. These are some wise words. You know this feeling when you fucked some solid 2-3 hours on a side-little-bitchy task like some stupid button not working? So far, this shit project has been three steps repeated all over again: 1. write unmaintainable-shit-code-cuz-youre-in-a-hurry for 1-40 minutes; 2. get NullReferenceException or some EF error and waste from 5 minutes to 4 hours on that shit; 3. go to step 1. Sometimes I just fucking hate programming.

--- a/Components/Pages/AccountPage.razor
+++ b/Components/Pages/AccountPage.razor
@@ -18,11 +18,13 @@
 }
 else
 {
-    <MudContainer Style="max-width:800px;" Class="mx-auto mt-4">
+    <MudContainer Style="max-width:900px;" Class="mx-auto mt-4">
 
         @if (IsOwner)
         {
             <MudButton Color="Color.Error" @onclick="Logout">Выйти из аккаунта</MudButton>
+
+            <MudFlexBreak></MudFlexBreak>
 
             <MudButtonGroup Color="Color.Primary" Variant="Variant.Filled">
                 <MudButton @onclick="() => CurrentComponent = AccountComponent.Profile">Профиль</MudButton>
@@ -36,6 +38,7 @@ else
             {
                 <MudButtonGroup Style="background: darkblue;" Variant="Variant.Filled">
                     <MudButton Style="color:white;" @onclick="OpenAdjustmentDialog">Расписание</MudButton>
+                    <MudButton Style="color:white;" @onclick="() => CurrentComponent = AccountComponent.OrdersToDeliver">Заказы мне</MudButton>
                 </MudButtonGroup>
             }
 
@@ -85,6 +88,11 @@ else
                 <ScheduleRequests User="@user"></ScheduleRequests>
                 break;
             }
+            case AccountComponent.OrdersToDeliver:
+            {
+                <OrdersToDeliver User="@user"></OrdersToDeliver>
+                break;
+            }
         }
 
     </MudContainer>
@@ -100,7 +108,8 @@ else
         OrderHistory,
         Cart,
         UserList,
-        ScheduleRequests
+        ScheduleRequests,
+        OrdersToDeliver
     }
 
     [Inject]
