--- a/Components/Pages/Notifications.razor
+++ b/Components/Pages/Notifications.razor
@@ -5,7 +5,7 @@
 {
     <MudPaper Elevation="3" Class="p-4 rounded-lg">
         <MudStack Spacing="2">
-            <MudText Typo="Typo.h5" Class="mb-2">Notifications</MudText>
+            <MudText Typo="Typo.h5" Class="mb-2">Уведомления</MudText>
 
             @foreach (var n in NotificationList)
             {
@@ -45,7 +45,7 @@ else
 {
     <MudPaper Elevation="3" Class="p-4 rounded-lg" style="text-align:center;">
         <MudIcon Icon="@Icons.Material.Filled.NotificationsOff" Color="Color.Secondary" Size="Size.Large" />
-        <MudText Typo="Typo.h6" class="mt-2">Нет уведомлений</MudText>
+        <MudText Typo="Typo.h6" class="mt-2">нет уведомлений</MudText>
     </MudPaper>
 }
 
