--- a/Components/Pages/Profile.razor
+++ b/Components/Pages/Profile.razor
@@ -50,7 +50,8 @@ else
                 <MudText Typo="Typo.h6">день рождения: @account.BirthDate</MudText>
                 @if (user != null && user.Identity.IsAuthenticated && account.Id == int.Parse(user.Claims.First(c => c.Type == ClaimTypes.NameIdentifier).Value))
                 {
-                    <MudText Typo="Typo.subtitle2" Align="Align.Start">электронная почта (видна только вам): @account.Email</MudText>
+                    <MudText Typo="Typo.subtitle2" Align="Align.Start">электронная почта: @account.Email</MudText>
+                    <MudText Typo="Typo.subtitle2" Align="Align.Start">номер телефона: @account.Phone</MudText>
                     <MudButton Variant="Variant.Filled" Color="Color.Primary" Style="margin-bottom: 1rem;" Class="ml-auto mt-auto"
                                 OnClick="StartEditing">
                         Редактировать
@@ -59,10 +60,11 @@ else
             }
             else
             {
-                <MudTextField @bind-Value="EditableAccount.Lastname" Label="Фамилия (или username)" />
-                <MudTextField @bind-Value="EditableAccount.Restname" Label="Имя отчество" />
-                <MudTextField @bind-Value="EditableAccount.Bio" Label="О себе" Lines="3" />
-                <MudDatePicker @bind-Date="BirthDateEdit" Label="День рождения" />
+                <MudTextField @bind-Value="EditableAccount.Lastname" Label="фамилия (или username)" />
+                <MudTextField @bind-Value="EditableAccount.Restname" Label="имя отчество" />
+                <MudTextField @bind-Value="EditableAccount.Bio" Label="о себе" Lines="3" />
+                <MudDatePicker @bind-Date="BirthDateEdit" Label="день рождения" />
+                <MudTextField @bind-Value="EditableAccount.Phone" Label="номер телефона" Lines="3" />
 
                 <MudStack Direction="Row" Spacing="2" Class="mt-3 mb-3">
 
@@ -101,40 +103,6 @@ else
 
     </MudContainer>
 
-        <!--<MudContainer Style="display:flex; padding-top:1rem;">
-            <MudImage Src="@AccountPage.GetImageSrc(account.ProfilePic)" Class="rounded-lg" Elevation="25" ObjectFit="ObjectFit.Cover" Style="max-width:50%; margin-bottom:1rem;" />
-            <MudContainer Style="display:flex; flex-direction:column; align-items:flex-start;">
-                <MudText Typo="Typo.h5" Align="Align.Center">@account.Lastname @account.Restname</MudText>
-                <MudText Typo="Typo.h6" Align="Align.Center">обо мне:</MudText>
-                <MudText Typo="Typo.subtitle1" Align="Align.Center" Class="text-secondary">
-                    @account.Bio
-                </MudText>
-                <MudText Typo="Typo.h6" Align="Align.Center">день рождения: @account.BirthDate</MudText>
-                @if (user != null && user.Claims.Any() && account.Id == int.Parse(user.Claims.First(c => c.Type == ClaimTypes.NameIdentifier).Value))
-                {
-                    <MudText Typo="Typo.subtitle2" Align="Align.Start">электронная почта (видна только вам): @account.Email</MudText>                    
-                }
-                @if (account.Role == AccountRole.Barber)
-                {
-                    <MudText Typo="Typo.h6" Align="Align.Center">что я умею:</MudText>
-                    <MudText Typo="Typo.body1" Align="Align.Center" Class="text-secondary">
-                        @if (jobs is not null && cart != null)
-                        {
-                            <MudList T="string">
-                                @foreach (var job in jobs)
-                                {
-                                    <MudContainer Class="d-flex" Style="align-items:center">
-                                        <MudListItem Text=@job.Job.Name SecondaryText=@(job.Price is null ? job.Job.DefaultPrice.ToString() : job.Price.ToString()) />
-                                        <MudButton @onclick="async () => { await OnServiceClicked(job.Job); }" Disabled="false" Style=@($"background:{(cart.JobSet.Contains(job.Job) ? "gray" : job.Job.ColorCSS)}; height:min-content;")>@(cart.JobSet.Contains(job.Job) ? "Добавлено" : "")</MudButton>
-                                    </MudContainer>
-                                }
-                            </MudList>                        
-                        }
-                    </MudText>
-                }
-            </MudContainer>
-        </MudContainer> -->
-
         @if (account.Role == AccountRole.Barber)
         {
             <MudDivider Class="my-4" />
@@ -163,12 +131,12 @@ else
 
             <!-- Calendar Section -->
             <MudText Typo="Typo.h6" Class="mb-2">Schedule</MudText>
-            <MudDatePicker PickerVariant="PickerVariant.Static" Orientation="Orientation.Landscape" @bind-Date="_selectedDate" />
+            <MudDatePicker IsDateDisabledFunc="@((DateTime dt)=>(dt < DateTime.Today || dt > DateTime.Today.AddDays(7)))" PickerVariant="PickerVariant.Static" Orientation="Orientation.Landscape" @bind-Date="_selectedDate" />
 
             <MudDivider Class="my-4" />
 
             <MudButton @onclick="OpenDialogAsync" Variant="Variant.Filled" Color="Color.Primary">
-                Book
+                Забронировать
             </MudButton>
 
 
@@ -266,18 +234,19 @@ else
 
     async Task SaveEditing()
     {
-        // copy EditedAccount back to account
         account.Lastname = EditableAccount.Lastname;
         account.Restname = EditableAccount.Restname;
         account.Bio = EditableAccount.Bio;
         account.BirthDate = EditableAccount.BirthDate;
         account.ProfilePic = EditableAccount.ProfilePic;
+        account.Phone = EditableAccount.Phone;
 
         Context.Accounts.Update(account);
         await Context.SaveChangesAsync();
 
         Snackbar.Add("Изменения сохранены", Severity.Success);
         IsEditing = false;
+        StateHasChanged();
     }
 
     private async Task OnProfilePicChanged(InputFileChangeEventArgs e)
